TL-7478 kiwifruitresponsive: fixed layout issue with context header
Reviewed-on: https://review.totaralms.com/9145
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/kiwifruitresponsive/style/core.css
+++ b/theme/kiwifruitresponsive/style/core.css
@@ -1942,3 +1942,6 @@ div.totara-dialog td.select #search-tab #fgroup_id_searchgroup {
 .totara-dialog h3 {
     color: #ffffff;
 }
+.page-context-header h2 {
+    margin-left: 110px;
+}
